--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -23,7 +23,7 @@ else if (UserInfo.IsUserValid)
     // 只有當使用者初始化完成且驗證有效時，才顯示主畫面
     <div class="page">
         <div class="sidebar">
-            <NavMenu />
+            <HWDPortalMaui.Components.Layout.NavMenu />
             <div class="sidebar-footer">
                 <span>Version: @AppInfo.Current.VersionString</span>
             </div>
