--- a/Components/Pages/Document.razor
+++ b/Components/Pages/Document.razor
@@ -321,7 +321,7 @@
 
 @code {
     [CascadingParameter]
-    public MainLayout? Layout { get; set; }
+    public HWDPortalMaui.Components.Layout.MainLayout? Layout { get; set; }
 
     // 供上傳 Modal 使用的年份列表 (Y-2 to Y+1)，自動排序
     private List<int> UploadYearList
