--- a/Components/Pages/SecondSource.razor
+++ b/Components/Pages/SecondSource.razor
@@ -275,7 +275,7 @@
 
 @code {
     [CascadingParameter]
-    public MainLayout? Layout { get; set; }
+    public HWDPortalMaui.Components.Layout.MainLayout? Layout { get; set; }
 
     // Modal 相關狀態
     private bool showManageModal = false;
