--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using HWDPortalMaui
 @using HWDPortalMaui.Components
 @using HWDPortalMaui.Components.Layout
+@using HWDPortalMaui.Components.Pages.EEDesignCheck.Layout
+@using HWDPortalMaui.Components.Pages.EEDesignCheck.Page
